--- a/krishnaStyles.css
+++ b/krishnaStyles.css
@@ -54,6 +54,14 @@ header div.headInfo div.phone {
     border-bottom: 1px solid rgb(228, 227, 227);
     font-family: 'Montserrat', sans-serif;
 }
+#display{
+    display: inline;
+}
+#display:active{
+    cursor: pointer;
+    background-color: rgb(207, 206, 206);
+}
+
 
 .phone img, .opdTimes img{
     width: 12px;
