--- a/servicesStyles.css
+++ b/servicesStyles.css
@@ -121,6 +121,7 @@ header div.headInfo div.location a:hover{
 .navBlock{
     position: sticky;
     top: 0px;
+    z-index: 1000;
 }
 
 .navBar {
@@ -157,6 +158,58 @@ header div.headInfo div.location a:hover{
 .navBar ul li.link a:hover {
     color: black;
     font-weight: bold;
+}
+
+.introBlock{
+    /* background-color: rgb(228, 228, 228); */
+    margin-top: 50px;
+    width:100%;
+    height: 550px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+.introText{
+    background-color: rgba(252, 252, 252, 0.75);
+    width: 35%;
+    height: 300px;
+    margin-right: -350px;
+    z-index: 2;
+    border-radius: 30px;
+    display: flex;
+    flex-direction: column;
+}
+.introTitle{
+    margin: 20px 10px;
+    padding: 10px;
+    font-size: 185%;
+    color:rgb(1, 25, 102);
+    font-weight: 200%;
+}
+.introDes{
+    margin: 0px 15px;
+    padding: 5px 10px;
+    line-height: 1.8;
+}
+.introImg{
+    width: 60%;
+    height: 500px;
+    border-radius: 25px;
+}
+.introImg img{
+    width: 100%;
+    height: 490px;
+    border-radius: 25px;
+}
+
+.scrolldown{
+    margin-left: 40px;
+    width: 7%;
+    height: 100px;
+}
+.scrolldown img{
+    width: 100%;
+    height: 90px;
 }
 
 div.contactBlock{
