--- a/krishnaStyles.css
+++ b/krishnaStyles.css
@@ -7,7 +7,7 @@ html{
     scroll-behavior: smooth;
 }
 .lineSpacing{
-    color: white;
+    visibility: hidden;
 }
 
 header {
@@ -167,7 +167,7 @@ header div.headInfo div.location a:hover{
     font-size: 1.2rem;
     font-family: 'Montserrat', sans-serif;
     text-decoration: none;
-    background-color: rgb(1, 36, 151);
+    background-color: forestgreen;
     padding: 10px 15px 10px 15px;
     border-radius: 5px;
     color: white;
@@ -177,7 +177,7 @@ header div.headInfo div.location a:hover{
 }
 
 .navBar ul li.button a:hover {
-    background-color: forestgreen;
+    background-color: rgb(1, 36, 151);
 }
 
 section {
@@ -190,7 +190,6 @@ section {
 div.homeSec {
     display: flex;
     padding-top: 20px;
-    background-color: rgb(253, 251, 251);
 }
 
 div.homeSec div.homeLeft {
@@ -203,12 +202,14 @@ div.homeSec div.homeLeft div.homeTitle h1 {
     margin: 5px 0px 20px 0px;
     font-size: 300%;
     font-family: 'Montserrat', sans-serif;
+    color: rgb(1, 25, 104);
 }
 
 div.homeSec div.homeLeft div.homeTitle p {
     margin: 5px 0px 20px 0px;
     font-family: 'Montserrat', sans-serif;
     color: rgb(107, 107, 107);
+    line-height: 1.6;
 }
 
 div.homeSec div.homeLeft div.homeDoctor {
@@ -239,18 +240,28 @@ div.homeSec div.homeLeft div.homeDoctor div.homeDocDes p {
 
 div.homeSec div.homeRight {
     flex: 1;
-    margin-right: 50px;
 }
 
 div.homeSec div.homeRight img {
     width: 650px;
 }
+.scrolldown2{
+    margin-left: 80%;
+    margin-bottom: -75px;
+    width: 7%;
+    height: 100px;
+}
 
+.scrolldown2 img{
+    width: 100%;
+    height: 90px;
+}
 
 div.aboutSec {
     display: flex;
     flex-direction: row-reverse;
-    background-color: rgb(253, 251, 251);
+    background-color: rgb(245, 245, 245);
+    border-radius: 25px;
 }
 
 div.aboutSec div.aboutLeft {
@@ -263,12 +274,14 @@ div.aboutSec div.aboutLeft div.aboutTitle h1 {
     margin: 5px 0px 20px 0px;
     font-size: 300%;
     font-family: 'Montserrat', sans-serif;
+    color: rgb(1, 25, 104);
 }
 
 div.aboutSec div.aboutLeft div.aboutTitle p {
     margin: 5px 0px 20px 0px;
     font-family: 'Montserrat', sans-serif;
     color: rgb(107, 107, 107);
+    line-height: 1.6;
 }
 
 div.aboutSec div.aboutLeft div.aboutDoctor {
@@ -299,27 +312,32 @@ div.aboutSec div.aboutLeft div.aboutDoctor div.aboutDocDes p {
 
 div.aboutSec div.aboutRight {
     margin-right: 10px;
+    margin-top: 50px;
+    border-radius: 25px;
 }
 
 div.aboutSec div.aboutRight img {
     width: 650px;
+    border-radius: 25px;
 }
 
 div.servicesBlock{
     display: flex;
     justify-content: space-between;
+    border-radius: 25px;
 }
 div.servicesBlock div.section{
     width: 31.5%;
-    background-color: rgb(253, 251, 251);
-    border: 1px solid rgb(218, 216, 216);
+    background-color: rgb(245, 245, 245);
     margin: 10px 5px 10px 5px;
     display: flex;
     flex-direction: column;
+    border-radius: 25px;
 }
 div.serviceImg img{
     width: 100%;
     height: 300px;
+    border-radius: 25px;
 }
 div.techDes, div.roomDes, div.galleryDes{
     margin: 5px;
@@ -345,8 +363,10 @@ div.techDes .clickhere, div.roomDes .clickhere, div.galleryDes .clickhere{
 }
 
 div.techDes p, div.roomDes p, div.galleryDes p{
+    margin: 5px;
     text-align: justify;
-    color: rgb(107, 107, 107);
+    color: rgb(88, 88, 88);
+    line-height: 1.6;
 }
 div.teamDocsTitle{
     background-color: rgb(1, 36, 151);
@@ -482,6 +502,9 @@ div.staffBlock div.staff div.staffDes p{
 }
 div.staffBlock div.staff div.staffDes h1{
     font-size: 250%;
+}
+div.staffBlock div.staff div.staffDes p{
+    line-height: 1.6;
 }
 
 div.appointBlock{
@@ -639,6 +662,15 @@ input[type=text], input[type=tel], input[type=date], select {
     }
     .homeRight{
         display: none;
+    }
+    .scrolldown2{
+        height: 80px;
+        width: 20%;
+        margin-left: 70%;
+        margin-bottom: -55px;
+    }
+    .scrolldown2 img{
+        height: 75px;
     }
     div.aboutSec div.aboutRight img{
         display: none;
