--- a/indexStyles.css
+++ b/indexStyles.css
@@ -584,7 +584,15 @@ input[type=text], input[type=tel], input[type=date], select {
     box-sizing: border-box;
     font-family: Montserrat;
   }
-  
+  .case{
+    background-color: rgb(250, 250, 250);
+    border: 1px solid rgb(240, 240, 240);
+    padding: 20px 10px;
+    margin: 10px 0px;
+  }
+  input[type=radio]{
+      margin-right: 100px;
+  }
   button[type=submit] {
     width: 100%;
     font-size: 110%;;
@@ -768,6 +776,11 @@ input[type=text], input[type=tel], input[type=date], select {
     }
     div.formTitle{
         margin: 0px auto 150px auto;
+    }
+    input[type=radio]{
+        display: block;
+        margin-right: 0px;
+        margin-bottom: 20px;
     }
     div.contactBlock{
         flex-direction: column;
